force-app/main/default/objects/Krow__Invoice_Integration__c/Krow__Invoice_Integration__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to check whether integrate invoices with sage journals or not</description>
    <label>Klient Invoice</label>
</CustomObject>