force-app/main/default/objects/Krow__Invoice_Integration__c/fields/Krow__Enable_Hold_for_Billing__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Hold_for_Billing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Hold for Billing</label>
    <type>Checkbox</type>
</CustomField>