force-app/main/default/objects/Krow__Invoice_Integration__c/fields/Krow__Enable_Xero_Integration__c.field-meta.xml
<CustomField>
    <fullName>Krow__Enable_Xero_Integration__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Xero Integration</label>
    <type>Checkbox</type>
</CustomField>