force-app/main/default/objects/Krow__Invoice_Integration__c/fields/Krow__Font_Size__c.field-meta.xml
<CustomField>
    <fullName>Krow__Font_Size__c</fullName>
    <defaultValue>12</defaultValue>
    <description>default font size of all text on the Invoice</description>
    <inlineHelpText>default font size of all text on the Invoice</inlineHelpText>
    <label>Font Size</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>