force-app/main/default/objects/Krow__Invoice_Integration__c/fields/Krow__Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>