force-app/main/default/objects/Krow__Invoice_Integration__c/fields/Krow__Invoice_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Krow__Invoice_Prefix__c</fullName>
    <label>Invoice Prefix</label>
    <length>70</length>
    <type>Text</type>
</CustomField>