force-app/main/default/objects/Krow__Invoice_Integration__c/fields/Krow__Organization_Logo_By_File__c.field-meta.xml
<CustomField>
    <fullName>Krow__Organization_Logo_By_File__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this is checked then the logo on Organization will save as a file instead of an attachment and the log will display on the Invoice from the file</description>
    <inlineHelpText>If this is checked then the logo on Organization will save as a file instead of an attachment and the log will display on the Invoice from the file</inlineHelpText>
    <label>Organization Logo By File</label>
    <type>Checkbox</type>
</CustomField>